# cluster_valid

./: .Rhistory  .gitignore  Cargo.toml  README.md  \  main.ipynb  main.r  pyproject.toml
.env/: pyvenv.cfg
.ipynb_checkpoints/: main-checkpoint.ipynb
src/: calc_error.rs  index_tree.rs  lib.rs  sender.rs  tests.rs
src/helpers/: clusters.rs  clusters_centroids.rs  mod.rs  pairs_and_distances.rs  raw_data.rs
src/indexes/: ball_hall.rs  beale.rs  c_index.rs  calinski_harabasz.rs  ccc.rs  davies_bouldin.rs  duda.rs  dunn.rs  friedman.rs  gamma.rs  gplus.rs  helper_funcs.rs  hubert.rs  mariott.rs  mcclain.rs  mod.rs  pseudot2.rs  ptbiserial.rs  ratkowsky.rs  rubin.rs  scott.rs  sd.rs  sdbw.rs  silhouette.rs  silhoutte.rs  tau.rs  tracew.rs  trcovw.rs
src/indexes/helpers/: between_group_dispercion.rs  clusters.rs  clusters_centroids.rs  counts.rs  mod.rs  pairs_and_distances.rs  raw_data.rs  s_plus_and_minus.rs  scat.rs  total_dispercion.rs  within_group_dispercion.rs
