[package]
name = "rust-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
numpy = "0.21.0"
pyo3 = { version = "0.21.0", features = [
  "experimental-declarative-modules",
  "extension-module",
] }
