[package]
name = "rust-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_ext"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.21.0"
ndarray = { version = "0.16.1", features = ["rayon"] }
pyo3 = { version = "0.21.2", features = [
  "experimental-declarative-modules",
  "extension-module",
] }

[patch.crates-io]
numpy = { git = "https://github.com/VladGTT/rust-numpy.git" }

[dev-dependencies]
assert_float_eq = "1.1.3"
